@@ -1,3 +1,8 @@
+2006-03-09  Han-Wen Nienhuys  <hanwen@xs4all.nl>
+
+	* scm/framework-ps.scm (ps-embed-cff): no Setup section in
+	Prolog. No %%EOF after CFF file.
+
 2006-03-08  Joe Neeman  <joeneeman@gmail.com>
 	
 	* lily/constrained-breaking.cc (get_max_systems): used to return a
